# k8s_update_service

./: .env  .gitignore  Cargo.toml  README.md  build.sh  debug_local.sh  dockerfile  kaibai_user_service.yml  run.sh  sources.list
.github/workflows/: CI.yml
doc/: access.table.puml  login_session.puml  role.table.puml  user_table.puml  详细设计.md
src/: commom.rs  common.rs  main.rs  middleware.rs  response.rs  router.rs
src/access/: access_service.rs  mod.rs
src/cron/: mod.rs  sync_auth.rs
src/entity/: access_entity.rs  mod.rs  role_access_entity.rs  role_entity.rs  user_entity.rs  user_role_entity.rs
src/role/: mod.rs  role_access_service.rs  role_route.rs  role_service.rs
src/user/: adm.rs  admin.rs  auth_service.rs  mod.rs  obs.rs  user_controller.rs  user_role.rs  user_role_service.rs  user_route.rs  user_service.rs
src/util/: common.rs  mod.rs  redis_actor.rs  sql_tool.rs  structs.rs  sync_opt.rs
test/: main.http
