[package]
edition = "2021"
name = "kaibai_user_service"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = "0.4.31"
env = "0.1.0"
env_logger = "0.11.5"
fast_log = {version = "1.7", features = ["lz4", "zip", "gzip"]}
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
log = "0.4.20"

serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tokio-util = "0.7.10"

utoipa = {version = "5.2.0", features = ["actix_extras"]}
utoipa-actix-web = "0.1"
utoipa-scalar = {version = "0.2.0", features = ["actix-web"]}

# ", default-features = false, features = ["runtime-tokio-rustls", "mysql"]
rbatis = {version = "4.5"}
rbdc-mysql = "4.5.0"
rbs = {version = "4.5"}

# [target.'cfg(not(target_env = "gnu"))'.dependencies]
# tikv-jemallocator = "0.6"

# mimalloc = "0.1.43"
