[package]
edition = "2021"
name = "kaibai_user_service"
version = "0.1.0"

[dependencies]
# mimalloc = "0.1.43"

actix-cors = "0.7.0"
actix-web = "4"

chrono = "0.4.31"
env = "0.1.0"
env_logger = "0.11.5"
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
log = {version = "0.4.20", features = ["std", "serde"]}

serde = {version = "1", features = ["derive"]}
serde_json = "1"

utoipa = {version = "5.2.0", features = ["actix_extras"]}
utoipa-actix-web = "0.1"
utoipa-scalar = {version = "0.2.0", features = ["actix-web"]}

rbatis = {version = "4.5"}
rbdc-mysql = "4.5.0"
rbs = {version = "4.5"}
redis = {version = "0.27.5", features = ["tokio-comp", "cluster"]}
redis-macros = "0.4.2"

cron-job = "0.2.0"
derive_more = {version = "1.0.0", features = ['full']}
futures-util = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
